New version of ffmpeg, more reliable timecode generator and ability to go 30fps

--- a/src/opt/blt/etc/blt-settings.conf
+++ b/src/opt/blt/etc/blt-settings.conf
@@ -1,6 +1,11 @@
 # Feeder settings
-TOD=2
+## Decklink card to use
 CARD="DeckLink Duo (1)"
+## Framerate to use (25 or 30 - 30 is really 30000/10001, just write 30)
+FRATE=25
+## Delay to insert to sync output (ms)
+TOD=1000
+
 
 # Receiver settings
 WORKDIR=/opt/blt/work/
