--- a/src/opt/blt/etc/blt-gen.service
+++ b/src/opt/blt/etc/blt-gen.service
@@ -1,6 +1,5 @@
 [Unit]
 Description=Broadcast Latency Tester - Generator
-WantedBy=multi-user.target
  
 [Service]
 Type=simple
@@ -9,3 +8,6 @@ Restart=always
 User=nobody
 Group=nogroup
 WorkingDirectory=/opt/blt/bin
+
+[Install]
+WantedBy=multi-user.target
